--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <div id="quote-box" class="quote-box">
         <p class="quote"></p>
         <p class="source"><span class="citation"></span><span class="year"></span></p>
+        <ul class="tags">
+        </ul>
       </div>
     </div>
     
