--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
     </header>
 
     <div class="container">
-      <div id="quote-box" class="quote-box">
-        <p class="quote"></p>
-        <p class="source"><span class="citation"></span><span class="year"></span></p>
-        <ul class="tags">
-        </ul>
-      </div>
+      <div id="quote-box" class="quote-box"></div>
     </div>
 
     <script src="js/script.js"></script>
